// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateUserTemplate test container should render the CreateUserTemplate successfully 1`] = `
<div
  className="modal show create-user-modal"
  id="singletonModal"
  role="dialog"
  tabIndex="-1"
>
  <div
    className="modal-dialog modal-dialog-centered modal-lg"
    role="document"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header align-items-center"
      >
        Invite a New User
        <button
          aria-label="Close"
          className="close text-white"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
      </div>
      <div
        className="modal-body text-left loader"
      >
        <div
          className="text-secondary font-size-14 mb-2 pl-2"
        >
          Select the type of user you are inviting
        </div>
        <form
          className="h-100 px-2 pl-0"
          onSubmit={[Function]}
        >
          <div
            className="form-row userType"
          >
            <div
              className=" col"
            >
              <div
                className="form-group custom-input-form-group form-group-radio"
              >
                <div
                  className="btn btn-sm radio-btn-box  p-0 active"
                >
                  <input
                    checked={true}
                    className="custom-control-input"
                    id="newuser-userType-custom-input-1"
                    name="newuser-userType-custom-input"
                    onChange={[Function]}
                    type="radio"
                    value="Internal"
                  />
                  <label
                    className="radio-label m-0 p-0"
                    htmlFor="newuser-userType-custom-input-1"
                  >
                    Internal
                  </label>
                </div>
                <div
                  className="btn btn-sm radio-btn-box  p-0 inactive"
                >
                  <input
                    checked={false}
                    className="custom-control-input"
                    id="newuser-userType-custom-input-2"
                    name="newuser-userType-custom-input"
                    onChange={[Function]}
                    type="radio"
                    value="ThirdParty"
                  />
                  <label
                    className="radio-label m-0 p-0"
                    htmlFor="newuser-userType-custom-input-2"
                  >
                    3rd Party
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            className="c-HeaderFormComponent row form-prompt"
          >
            <div
              className="col"
            >
              <p>
                Please complete the following fields to invite a new user.
              </p>
            </div>
          </div>
          <div
            className="form-row fname-lname"
          >
            <div
              className=" col-6"
            >
              <div
                className="form-group custom-input-form-group form-group-text mb-3
        "
                style={
                  Object {
                    "position": "static",
                  }
                }
              >
                <input
                  className="form-control form-control-firstName custom-input-element"
                  disabled={false}
                  id="newuser-firstName-custom-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onInvalid={[Function]}
                  required={true}
                  type="text"
                  value=""
                />
                
                <label
                  className="custom-input-label custom-input-label-placeholder"
                  htmlFor="newuser-firstName-custom-input"
                >
                  <div
                    className="label-upper-bg position-absolute w-100 h-50 d-block"
                  />
                  <div
                    className="label-lower-bg position-absolute w-100 h-50 d-block"
                  />
                  <span
                    className="label-text required"
                  >
                     
                    First Name
                     
                  </span>
                </label>
                <small
                  className="form-text custom-input-help-text text-muted"
                  style={
                    Object {
                      "paddingLeft": undefined,
                    }
                  }
                >
                  
                </small>
              </div>
            </div>
            <div
              className=" col-6"
            >
              <div
                className="form-group custom-input-form-group form-group-text mb-3
        "
                style={
                  Object {
                    "position": "static",
                  }
                }
              >
                <input
                  className="form-control form-control-lastName custom-input-element"
                  disabled={false}
                  id="newuser-lastName-custom-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onInvalid={[Function]}
                  required={true}
                  type="text"
                  value=""
                />
                
                <label
                  className="custom-input-label custom-input-label-placeholder"
                  htmlFor="newuser-lastName-custom-input"
                >
                  <div
                    className="label-upper-bg position-absolute w-100 h-50 d-block"
                  />
                  <div
                    className="label-lower-bg position-absolute w-100 h-50 d-block"
                  />
                  <span
                    className="label-text required"
                  >
                     
                    Last Name
                     
                  </span>
                </label>
                <small
                  className="form-text custom-input-help-text text-muted"
                  style={
                    Object {
                      "paddingLeft": undefined,
                    }
                  }
                >
                  
                </small>
              </div>
            </div>
          </div>
          <div
            className="form-row contact-details"
          >
            <div
              className=" col-6"
            >
              <div
                className="form-group custom-input-form-group form-group-text mb-3
        "
                style={
                  Object {
                    "position": "static",
                  }
                }
              >
                <input
                  className="form-control form-control-emailId custom-input-element"
                  disabled={false}
                  id="newuser-emailId-custom-input"
                  onChange={[Function]}
                  onInvalid={[Function]}
                  pattern="(([^<>()[\\\\]\\\\\\\\.,;:\\\\s@\\"]+(\\\\.[^<>()[\\\\]\\\\\\\\.,;:\\\\s@\\"]+)*)|(\\".+\\"))@((\\\\[[0-9]{1,3}\\\\.[0-9]{1,3}\\\\.[0-9]{1,3}\\\\.[0-9]{1,3}\\\\])|(([a-zA-Z\\\\-0-9]+\\\\.)+[a-zA-Z]{2,}))"
                  required={true}
                  type="email"
                  value=""
                />
                
                <label
                  className="custom-input-label custom-input-label-placeholder"
                  htmlFor="newuser-emailId-custom-input"
                >
                  <div
                    className="label-upper-bg position-absolute w-100 h-50 d-block"
                  />
                  <div
                    className="label-lower-bg position-absolute w-100 h-50 d-block"
                  />
                  <span
                    className="label-text required"
                  >
                     
                    Email
                     
                  </span>
                </label>
                <small
                  className="form-text custom-input-help-text text-muted"
                  style={
                    Object {
                      "paddingLeft": undefined,
                    }
                  }
                >
                  
                </small>
              </div>
            </div>
            <div
              className=" col-6"
            >
              <div
                className="form-group custom-input-form-group form-group-text mb-0
        "
                style={
                  Object {
                    "position": "static",
                  }
                }
              >
                <input
                  className="form-control form-control-phone custom-input-element"
                  disabled={false}
                  id="newuser-phone-custom-input"
                  maxLength={17}
                  onChange={[Function]}
                  onInvalid={[Function]}
                  pattern="^(\\\\([0-9]{3}\\\\) |[0-9]{3}-)[0-9]{3}-[0-9]{4}$"
                  required={false}
                  type="text"
                  value=""
                />
                
                <label
                  className="custom-input-label custom-input-label-placeholder"
                  htmlFor="newuser-phone-custom-input"
                >
                  <div
                    className="label-upper-bg position-absolute w-100 h-50 d-block"
                  />
                  <div
                    className="label-lower-bg position-absolute w-100 h-50 d-block"
                  />
                  <span
                    className="label-text"
                  >
                     
                    Mobile Number
                     
                  </span>
                </label>
                <small
                  className="form-text custom-input-help-text text-muted"
                  style={
                    Object {
                      "paddingLeft": undefined,
                    }
                  }
                >
                  Optional
                </small>
              </div>
            </div>
          </div>
          <div
            className="form-row role-and-brand"
          >
            <div
              className=" col-6"
            >
              <div
                className="form-group custom-input-form-group custom-select-form-group dropdown  mb-3  field-select-arrow"
              >
                <img
                  alt="i"
                  className="positioned-top-right"
                  data-html="true"
                  data-placement="right"
                  data-toggle="tooltip"
                  src="question.svg"
                  title="<div class=\\"py-2\\" data-reactroot=\\"\\"><b class=\\"position-absolute text-white tooltip-close-button\\">x</b><p class=\\"mt-2 pl-2 text-left font-size-12\\"><b>Admin:</b> Can invite reporter-level users, add new brands, submit claims, and view all submitted claims.<br/><br/><b>Reporter:</b> Can submit claims and see submitted claims for their assigned brands.<br/></p></div>"
                />
                <input
                  autoComplete="off"
                  className="form-control form-control-role custom-input-element"
                  data-toggle="dropdown"
                  disabled={false}
                  id="newuser-role-custom-input"
                  onChange={[Function]}
                  required={true}
                  type="select"
                  value=""
                />
                <label
                  className="custom-input-label custom-input-label-placeholder"
                  htmlFor="newuser-role-custom-input"
                >
                  <div
                    className="label-upper-bg position-absolute w-100 h-50 d-block"
                  />
                  <div
                    className="label-lower-bg position-absolute w-100 h-50 d-block"
                  />
                  <span
                    className="label-text"
                  >
                     
                    Set Role
                     
                  </span>
                </label>
                <div
                  className="dropdown-menu"
                />
                <small
                  className="form-text custom-input-help-text text-muted"
                  style={
                    Object {
                      "paddingLeft": "0.7rem",
                    }
                  }
                >
                  
                </small>
              </div>
            </div>
            <div
              className=" col-6"
            >
              <div
                className="form-group custom-input-form-group custom-multi-select-form-group dropdown   mb-3"
              >
                <input
                  autoComplete="off"
                  className="form-control form-control-brands custom-input-element"
                  data-toggle="dropdown"
                  disabled={false}
                  id="newuser-brands-custom-input"
                  onChange={[Function]}
                  required={true}
                  type="multiselect"
                  value=""
                />
                <label
                  className="custom-input-label custom-input-label-placeholder"
                  htmlFor="newuser-brands-custom-input"
                >
                  <div
                    className="label-upper-bg position-absolute w-100 h-50 d-block"
                  />
                  <div
                    className="label-lower-bg position-absolute w-100 h-50 d-block"
                  />
                  <span
                    className="label-text"
                  >
                     
                    Assign Brand
                     
                  </span>
                </label>
                <small
                  className="form-text custom-input-help-text text-muted"
                  style={
                    Object {
                      "paddingLeft": undefined,
                    }
                  }
                >
                  
                </small>
              </div>
            </div>
          </div>
          <div
            className="c-ButtonsPanel form-row action-footer"
            data-test="button-panel"
          >
            <div
              className="col new-user-button-panel text-right"
              data-test="button-div"
            >
              <button
                className="btn btn-sm cancel-btn text-primary"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                Cancel
              </button>
              <button
                className="btn btn-sm btn-primary submit-btn px-3 ml-3"
                disabled={true}
                type="submit"
              >
                Invite
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreateUserTemplate test container should render the CreateUserTemplate successfully 2`] = `
<div
  className="modal show create-user-modal"
  id="singletonModal"
  role="dialog"
  tabIndex="-1"
>
  <div
    className="modal-dialog modal-dialog-centered modal-lg"
    role="document"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header align-items-center"
      >
        Edit User
        <button
          aria-label="Close"
          className="close text-white"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
      </div>
      <div
        className="modal-body text-left loader"
      >
        <div
          className="text-secondary font-size-14 mb-2 pl-2"
        >
          Select the type of user you are inviting
        </div>
        <form
          className="h-100 px-2 pl-0"
          onSubmit={[Function]}
        >
          <div
            className="form-row userType"
          >
            <div
              className=" col"
            >
              <div
                className="form-group custom-input-form-group form-group-radio"
              >
                <div
                  className="btn btn-sm radio-btn-box  p-0 active"
                >
                  <input
                    checked={true}
                    className="custom-control-input"
                    id="newuser-userType-custom-input-1"
                    name="newuser-userType-custom-input"
                    onChange={[Function]}
                    type="radio"
                    value="Internal"
                  />
                  <label
                    className="radio-label m-0 p-0"
                    htmlFor="newuser-userType-custom-input-1"
                  >
                    Internal
                  </label>
                </div>
                <div
                  className="btn btn-sm radio-btn-box  p-0 inactive"
                >
                  <input
                    checked={false}
                    className="custom-control-input"
                    id="newuser-userType-custom-input-2"
                    name="newuser-userType-custom-input"
                    onChange={[Function]}
                    type="radio"
                    value="ThirdParty"
                  />
                  <label
                    className="radio-label m-0 p-0"
                    htmlFor="newuser-userType-custom-input-2"
                  >
                    3rd Party
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            className="c-HeaderFormComponent row form-prompt"
          >
            <div
              className="col"
            >
              <p>
                Please complete the following fields to invite a new user.
              </p>
            </div>
          </div>
          <div
            className="form-row fname-lname"
          >
            <div
              className=" col-6"
            >
              <div
                className="form-group custom-input-form-group form-group-text mb-3
        "
                style={
                  Object {
                    "position": "relative",
                  }
                }
              >
                <input
                  className="form-control form-control-firstName custom-input-element"
                  disabled={false}
                  id="newuser-firstName-custom-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onInvalid={[Function]}
                  required={true}
                  type="text"
                  value="Test Mohit"
                />
                <label
                  className="custom-input-label"
                  htmlFor="newuser-firstName-custom-input"
                >
                  <div
                    className="label-upper-bg position-absolute w-100 h-50 d-block"
                  />
                  <div
                    className="label-lower-bg position-absolute w-100 h-50 d-block"
                  />
                  <span
                    className="label-text required"
                  >
                     
                    First Name
                     
                  </span>
                </label>
                <small
                  className="form-text custom-input-help-text text-muted"
                  style={
                    Object {
                      "paddingLeft": undefined,
                    }
                  }
                >
                  
                </small>
              </div>
            </div>
            <div
              className=" col-6"
            >
              <div
                className="form-group custom-input-form-group form-group-text mb-3
        "
                style={
                  Object {
                    "position": "relative",
                  }
                }
              >
                <input
                  className="form-control form-control-lastName custom-input-element"
                  disabled={false}
                  id="newuser-lastName-custom-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onInvalid={[Function]}
                  required={true}
                  type="text"
                  value="Nagar"
                />
                <label
                  className="custom-input-label"
                  htmlFor="newuser-lastName-custom-input"
                >
                  <div
                    className="label-upper-bg position-absolute w-100 h-50 d-block"
                  />
                  <div
                    className="label-lower-bg position-absolute w-100 h-50 d-block"
                  />
                  <span
                    className="label-text required"
                  >
                     
                    Last Name
                     
                  </span>
                </label>
                <small
                  className="form-text custom-input-help-text text-muted"
                  style={
                    Object {
                      "paddingLeft": undefined,
                    }
                  }
                >
                  
                </small>
              </div>
            </div>
          </div>
          <div
            className="form-row contact-details"
          >
            <div
              className=" col-6"
            >
              <div
                className="form-group custom-input-form-group form-group-text disabled mb-3
        "
                style={
                  Object {
                    "position": "relative",
                  }
                }
              >
                <input
                  className="form-control form-control-emailId custom-input-element"
                  disabled={true}
                  id="newuser-emailId-custom-input"
                  onChange={[Function]}
                  onInvalid={[Function]}
                  pattern="(([^<>()[\\\\]\\\\\\\\.,;:\\\\s@\\"]+(\\\\.[^<>()[\\\\]\\\\\\\\.,;:\\\\s@\\"]+)*)|(\\".+\\"))@((\\\\[[0-9]{1,3}\\\\.[0-9]{1,3}\\\\.[0-9]{1,3}\\\\.[0-9]{1,3}\\\\])|(([a-zA-Z\\\\-0-9]+\\\\.)+[a-zA-Z]{2,}))"
                  required={true}
                  type="email"
                  value="wm.ropro.stg+demo@gmail.com"
                />
                <label
                  className="custom-input-label"
                  htmlFor="newuser-emailId-custom-input"
                >
                  <div
                    className="label-upper-bg position-absolute w-100 h-50 d-block"
                  />
                  <div
                    className="label-lower-bg position-absolute w-100 h-50 d-block"
                  />
                  <span
                    className="label-text required"
                  >
                     
                    Email
                     
                  </span>
                </label>
                <small
                  className="form-text custom-input-help-text text-muted"
                  style={
                    Object {
                      "paddingLeft": undefined,
                    }
                  }
                >
                  
                </small>
              </div>
            </div>
            <div
              className=" col-6"
            >
              <div
                className="form-group custom-input-form-group form-group-text mb-0
        "
                style={
                  Object {
                    "position": "relative",
                  }
                }
              >
                <input
                  className="form-control form-control-phone custom-input-element"
                  disabled={false}
                  id="newuser-phone-custom-input"
                  maxLength={17}
                  onChange={[Function]}
                  onInvalid={[Function]}
                  pattern="^(\\\\([0-9]{3}\\\\) |[0-9]{3}-)[0-9]{3}-[0-9]{4}$"
                  required={false}
                  type="text"
                  value="(234) 567-8901"
                />
                <label
                  className="custom-input-label"
                  htmlFor="newuser-phone-custom-input"
                >
                  <div
                    className="label-upper-bg position-absolute w-100 h-50 d-block"
                  />
                  <div
                    className="label-lower-bg position-absolute w-100 h-50 d-block"
                  />
                  <span
                    className="label-text"
                  >
                     
                    Mobile Number
                     
                  </span>
                </label>
                <small
                  className="form-text custom-input-help-text text-muted"
                  style={
                    Object {
                      "paddingLeft": undefined,
                    }
                  }
                >
                  Optional
                </small>
              </div>
            </div>
          </div>
          <div
            className="form-row role-and-brand"
          >
            <div
              className=" col-6"
            >
              <div
                className="form-group custom-input-form-group custom-select-form-group dropdown  mb-3  field-select-arrow"
              >
                <img
                  alt="i"
                  className="positioned-top-right"
                  data-html="true"
                  data-placement="right"
                  data-toggle="tooltip"
                  src="question.svg"
                  title="<div class=\\"py-2\\" data-reactroot=\\"\\"><b class=\\"position-absolute text-white tooltip-close-button\\">x</b><p class=\\"mt-2 pl-2 text-left font-size-12\\"><b>Admin:</b> Can invite reporter-level users, add new brands, submit claims, and view all submitted claims.<br/><br/><b>Reporter:</b> Can submit claims and see submitted claims for their assigned brands.<br/></p></div>"
                />
                <input
                  autoComplete="off"
                  className="form-control form-control-role custom-input-element"
                  data-toggle="dropdown"
                  disabled={false}
                  id="newuser-role-custom-input"
                  onChange={[Function]}
                  required={true}
                  type="select"
                  value="Super Admin"
                />
                <label
                  className="custom-input-label "
                  htmlFor="newuser-role-custom-input"
                >
                  <div
                    className="label-upper-bg position-absolute w-100 h-50 d-block"
                  />
                  <div
                    className="label-lower-bg position-absolute w-100 h-50 d-block"
                  />
                  <span
                    className="label-text"
                  >
                     
                    Set Role
                     
                  </span>
                </label>
                <div
                  className="dropdown-menu"
                />
                <small
                  className="form-text custom-input-help-text text-muted"
                  style={
                    Object {
                      "paddingLeft": "0.7rem",
                    }
                  }
                >
                  
                </small>
              </div>
            </div>
            <div
              className=" col-6"
            >
              <div
                className="form-group custom-input-form-group custom-multi-select-form-group dropdown   mb-3"
              >
                <input
                  autoComplete="off"
                  className="form-control form-control-brands custom-input-element"
                  data-toggle="dropdown"
                  disabled={false}
                  id="newuser-brands-custom-input"
                  onChange={[Function]}
                  required={true}
                  type="multiselect"
                  value=""
                />
                <label
                  className="custom-input-label custom-input-label-placeholder"
                  htmlFor="newuser-brands-custom-input"
                >
                  <div
                    className="label-upper-bg position-absolute w-100 h-50 d-block"
                  />
                  <div
                    className="label-lower-bg position-absolute w-100 h-50 d-block"
                  />
                  <span
                    className="label-text"
                  >
                     
                    Assign Brand
                     
                  </span>
                </label>
                <small
                  className="form-text custom-input-help-text text-muted"
                  style={
                    Object {
                      "paddingLeft": undefined,
                    }
                  }
                >
                  
                </small>
              </div>
            </div>
          </div>
          <div
            className="c-ButtonsPanel form-row action-footer"
            data-test="button-panel"
          >
            <div
              className="col new-user-button-panel text-right"
              data-test="button-div"
            >
              <button
                className="btn btn-sm cancel-btn text-primary"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                Cancel
              </button>
              <button
                className="btn btn-sm btn-primary submit-btn px-3 ml-3"
                disabled={true}
                type="submit"
              >
                Save
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
